force-app/main/default/objects/DialShree_UserInfo__c/DialShree_UserInfo__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DialShree UserInfo</label>
</CustomObject>