force-app/main/default/objects/DialShree_UserInfo__c/fields/Dialshree_Password__c.field-meta.xml
<CustomField>
    <fullName>Dialshree_Password__c</fullName>
    <label>Dialshree Password</label>
    <type>TextArea</type>
</CustomField>