force-app/main/default/objects/DialShree_UserInfo__c/fields/Dialshree_User__c.field-meta.xml
<CustomField>
    <fullName>Dialshree_User__c</fullName>
    <label>Dialshree User</label>
    <type>TextArea</type>
</CustomField>