force-app/main/default/objects/DialShree_UserInfo__c/fields/Phone_Number_Masking__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Masking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this field as true if phone number masking should be enabled for this user in CTI.</inlineHelpText>
    <label>Phone Number Masking</label>
    <type>Checkbox</type>
</CustomField>